--- a/AulaComponentesInterface/app/src/main/res/values/strings.xml
+++ b/AulaComponentesInterface/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AulaComponentesInterface</string>
+    <string name="botao_jogar">PLAY</string>
 </resources>
